@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'application'
-    id 'net.ltgt.errorprone' version '2.0.2'
     id 'checkstyle'
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
@@ -20,7 +19,6 @@ version '1.0-SNAPSHOT'
 
 
 dependencies {
-    errorprone 'com.google.errorprone:error_prone_core:2.15.0'
     checkstyle 'com.puppycrawl.tools:checkstyle:10.3.3'
     implementation 'org.slf4j:slf4j-api:2.0.0'
     implementation 'ch.qos.logback:logback-classic:1.4.0'
@@ -30,8 +28,15 @@ dependencies {
     implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.11'
 }
 
+def incubatorArgs = ["--add-modules", "jdk.incubator.foreign"]
+
 application {
     mainClass = 'server.Server'
+}
+
+test {
+    maxHeapSize = "128m"
+    useJUnitPlatform()
 }
 
 configurations {
@@ -40,7 +45,6 @@ configurations {
 
 run {
     application
-    applicationDefaultJvmArgs = ['-Xmx1024m']
 }
 
 jar {
